[gd_scene load_steps=17 format=2]

[ext_resource path="res://assets/textures/enemies/drone/helice.tres" type="Texture" id=1]
[ext_resource path="res://assets/sounds/drone.mp3" type="AudioStream" id=2]
[ext_resource path="res://entities/enemies/Drone.gd" type="Script" id=3]
[ext_resource path="res://assets/textures/enemies/drone/drone.png" type="Texture" id=4]
[ext_resource path="res://assets/sounds/tank_gun/end_effect_2.mp3" type="AudioStream" id=5]
[ext_resource path="res://assets/sounds/tank_gun/tank_gun.mp3" type="AudioStream" id=6]
[ext_resource path="res://assets/textures/enemies/drone/gun.png" type="Texture" id=7]
[ext_resource path="res://entities/vehicle_guns/DroneGun.gd" type="Script" id=8]
[ext_resource path="res://assets/textures/weapon_fire/fire_sprite/fire_light.png" type="Texture" id=9]
[ext_resource path="res://assets/textures/weapon_fire/Fire01.tres" type="Texture" id=10]
[ext_resource path="res://assets/textures/weapon_fire/bullet_1_light.png" type="Texture" id=11]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 118.717, 61.4853 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 127.197, 62.0474 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.113725, 0.843137, 0.109804, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.133333, 0.12549, 0.12549, 1 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 1365.6, 1899.48 )

[node name="Drone" type="Node2D"]
position = Vector2( 447.647, 276.208 )
script = ExtResource( 3 )

[node name="Weapon" type="Node2D" parent="."]
position = Vector2( -22.9406, 15.1452 )
script = ExtResource( 8 )

[node name="weapon" type="Sprite" parent="Weapon"]
position = Vector2( 18.8334, 12.3657 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 7 )

[node name="fire" type="Sprite" parent="Weapon/weapon"]
visible = false
position = Vector2( 190.152, -41.6287 )
rotation = -3.14159
scale = Vector2( 1.6, 1.6 )
texture = ExtResource( 10 )
__meta__ = {
"_edit_group_": true
}

[node name="Light2D" type="Light2D" parent="Weapon/weapon/fire"]
position = Vector2( -6.13179, -0.743249 )
scale = Vector2( 1.1168, 0.902203 )
texture = ExtResource( 9 )
color = Color( 1, 0.654902, 0, 1 )
energy = 1.2

[node name="EndShotAudio" type="AudioStreamPlayer2D" parent="Weapon"]
position = Vector2( -3.34088, 11.8044 )
stream = ExtResource( 5 )
volume_db = -10.0

[node name="HeavyShot2D" type="AudioStreamPlayer2D" parent="Weapon"]
position = Vector2( -3.34088, 11.8044 )
stream = ExtResource( 6 )
volume_db = -10.0

[node name="BulletSpawn" type="Position2D" parent="Weapon"]
position = Vector2( 45.6576, 3.54187 )

[node name="Drone" type="KinematicBody2D" parent="."]
collision_layer = 16
collision_mask = 17

[node name="drone" type="Sprite" parent="Drone"]
position = Vector2( -22.9768, -12.7892 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Drone"]
position = Vector2( -23.3345, -13.9878 )
shape = SubResource( 1 )

[node name="Heli1" type="Sprite" parent="."]
position = Vector2( -105.956, -3.23901 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="Heli2" type="Sprite" parent="."]
position = Vector2( -94.7823, -48.5663 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="Heli3" type="Sprite" parent="."]
position = Vector2( 49.454, -48.5663 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="Heli4" type="Sprite" parent="."]
position = Vector2( 58.9949, -1.98416 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="HeliceAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 2 )
volume_db = 7.0
autoplay = true

[node name="PlayerBulletDetector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerBulletDetector"]
modulate = Color( 0.231373, 0.996078, 0.0156863, 1 )
position = Vector2( -24.8974, -12.7135 )
shape = SubResource( 2 )

[node name="HealhBar" type="ProgressBar" parent="."]
margin_left = -103.0
margin_top = -75.0
margin_right = 59.0
margin_bottom = -61.0
custom_styles/fg = SubResource( 3 )
custom_styles/bg = SubResource( 4 )
value = 100.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Light2D" type="Light2D" parent="."]
position = Vector2( -18.5794, -68.7442 )
scale = Vector2( 3.11825, 2.5874 )
texture = ExtResource( 11 )

[node name="PlayerDetector" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetector"]
modulate = Color( 0, 0.439216, 1, 1 )
position = Vector2( -63.7331, 1749.43 )
shape = SubResource( 5 )

[connection signal="area_entered" from="PlayerBulletDetector" to="." method="_on_PlayerBulletDetector_area_entered"]
[connection signal="area_entered" from="PlayerDetector" to="." method="_on_PlayerDetector_area_entered"]
[connection signal="area_exited" from="PlayerDetector" to="." method="_on_PlayerDetector_area_exited"]
